--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
                     <a href=""> Facebook</a>
                     <a href="">Twitter</a>
                     <a href="">Instagram</a>
+                    <a href="">Linkedin</a>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <p>Get to know Us</p>
+                    <p>Make Money with Us</p>
                     <a href=""> Careers</a>
                     <a href="">Press Releases</a>
                     <a href="">Amazon Science</a>
@@ -182,7 +183,7 @@
             </div>
             <div>
                 <ul>
-                    <p>Get to know Us</p>
+                    <p>Let Us Help You</p>
                     <a href=""> Careers</a>
                     <a href="">Press Releases</a>
                     <a href="">Amazon Science</a>
